--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
         <h2 class="contact_titulo">Contact</h2>
     </div>
     <div class="d-flex flex-row justify-content-center align-items-center ">
-        <form class="w-75">
+        <form class="w-75 container">
             <div class="form-group">
               <input type="email" class="form-control border-0 w-100 shadow-sm p-3 rounded-lg my-4"  placeholder="Enter name">
             </div>
