--- a/preguntasF.html
+++ b/preguntasF.html
@@ -217,7 +217,8 @@
 </footer>
 <script src="./owl/jquery.min.js"></script>
 <script src="./owl/owl.carousel.min.js"></script>
-<script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
+<script src="bootstrap-4.6.1/dist/js/bootstrap.js"></script>
 <script src="js/nav.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
