falta rayas y  redondear figuras

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonials_item item d-flex justify-content-around py-1 ">
+                <div class="container testimonials_item item d-flex justify-content-around py-1 ">
                     <div class="w-50 p-5  mt-5 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
@@ -306,7 +306,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonials_item item d-flex justify-content-around py-1 ">
+                <div class="container testimonials_item item d-flex justify-content-around py-1 ">
                     <div class="w-50 p-5  mt-5 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
