--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
         </form>
     </section>
     <footer class="d-flex flex-column mt-5">
-        <div class="d-flex flex-row  mt-5 footer_info flex-wrap pt-4">
-            <div class="d-flex flex-column justify-content-center align-items-center">
+        <div class="footer_info d-flex flex-row  mt-5 flex-wrap pt-4">
+            <div class="d-flex flex-column justify-content-center align-items-center ">
                 <a href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
                 </a>
@@ -381,7 +381,7 @@
                 <h6>More Information</h6>
                 <ul>
                     <li class="list-unstyled d-flex flex-row">
-                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
                             <i class="bi bi-geo-alt-fill mx-2"></i>
                             <p>
                                 5191 Eastside Hwy
@@ -390,7 +390,7 @@
                         </a>
                     </li>
                     <li class="list-unstyled d-flex flex-row">
-                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
                             <i class="bi bi-envelope-fill mx-2"></i>
                             <p>info@glamping.global</p>
                         </a>
