--- a/preguntasF.html
+++ b/preguntasF.html
@@ -156,65 +156,85 @@
             </div>
         </form>
     </section>
-<footer class="d-flex flex-column mt-5">
-    <div class="d-flex flex-row  mt-5 footer_info flex-wrap pt-5">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
-            <ul class="d-flex flex-row list-unstyled">
-                <li class="mx-2">
-                    <i class="bi bi-facebook"></i>
-                </li>
-                <li class="mx-2">
-                    <i class="bi bi-instagram"></i>
-                </li>
-                <li class="mx-2">
-                    <i class="bi bi-linkedin"></i>
-                </li>
-            </ul>
+    <footer class="d-flex flex-column mt-5">
+        <div class="footer_info d-flex flex-row  mt-5 flex-wrap pt-4">
+            <div class="d-flex flex-column justify-content-center align-items-center ">
+                <a href="index.html" target="_blank" rel="noopener noreferrer">
+                    <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                </a>
+                <ul class="d-flex flex-row list-unstyled">
+                    <li class="mx-2">
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                    </li>
+                    <li class="mx-2">
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="mx-2">
+                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h6>Quick Links</h6>
+                <ul>
+                    <li >
+                        <span class="punto"></span>
+                        <a aria-current="page" href="about.html">About us</a>
+                    </li>
+                    <li >
+                        <span class="punto "></span>
+                        <a  href="shop.html">Shop By</a>
+                    </li>
+                    <li class=>
+                        <span class="punto"></span>
+                        <a  href="preguntasF.html">Faq’s </a>
+                    </li>
+                    <li >
+                        <span class="punto"></span>
+                        <a  href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h6>More Information</h6>
+                <ul>
+                    <li class="list-unstyled d-flex flex-row">
+                        <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill mx-2"></i>
+                            <p>
+                                5191 Eastside Hwy
+                                Stevensville, MT 59870
+                            </p>
+                        </a>
+                    </li>
+                    <li class="list-unstyled d-flex flex-row">
+                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-envelope-fill mx-2"></i>
+                            <p>info@glamping.global</p>
+                        </a>
+                    </li>
+                    <li class="list-unstyled d-flex flex-row2">
+                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-telephone-fill mx-2"></i>
+                            <p>Tel: 1-844-WEGLAMP</p>
+                        </a> 
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h6>Quick Links</h6>
-            <ul>
-                <li >
-                    <a aria-current="page" href="about.html">About us</a>
-                </li>
-                <li >
-                    <a  href="shop.html">Shop By</a>
-                </li>
-                <li class=>
-                    <a  href="preguntasF.html">Faq’s </a>
-                </li>
-                <li >
-                    <a  href="contact.html">Contact Us</a>
-                </li>
-            </ul>
+        <div class="d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
+            <p>Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+            <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+            </a>
         </div>
-        <div>
-            <h6>More Information</h6>
-            <ul>
-                <li class="list-unstyled d-flex flex-row">
-                    <i class="bi bi-geo-alt-fill mx-2"></i>
-                    <p>
-                        5191 Eastside Hwy
-                        Stevensville, MT 59870
-                    </p> 
-                </li>
-                <li class="list-unstyled d-flex flex-row">
-                    <i class="bi bi-envelope-fill mx-2"></i>
-                    <p>info@glamping.global</p>
-                </li>
-                <li class="list-unstyled d-flex flex-row2">
-                    <i class="bi bi-telephone-fill mx-2"></i>
-                    <p>Tel: 1-844-WEGLAMP</p> 
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-        <p>Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-        <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt=""">
-    </div>
-</footer>
+    </footer>
 <script src="./owl/jquery.min.js"></script>
 <script src="./owl/owl.carousel.min.js"></script>
 <script src="bootstrap-4.6.1/dist/js/bootstrap.js"></script>
