falta rayas y  redondear figuras

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         </div>
     </header>
     <section class=" d-flex flex-column align-items-end justify-content-center h-100 m-0 hero">
-        <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
+        <video autoplay loop muted pay class="w-100   position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
           </video>
         <div class="hero_panel_color_uno position-absolute h-100">
@@ -79,11 +79,8 @@
         <div class="hero_panel_color_dos position-absolute h-100"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Lead the pack! <br> Run Run!
+                About us
             </h1>
-            <button class="hero_top_boton">
-                Get Started
-            </button>
         </div>
         <ul class="hero_redes_sociales d-flex flex-row ">
             <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
@@ -103,80 +100,78 @@
             </li>
         </ul>
     </section>
-    <section class="about d-flex flex-column w-100 my-5">
-        <div class="about_contenido_contenedor w-100">
-            <div class="d-flex flex-row">
-                <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_titulo_img" alt="about_us_titulo_img">
-                <h2 class="about_titulo">ABOUT US</h2>
-            </div>
-            <div class="about_informacion container">
-                <article >
-                    <h6>W</h6> 
-                    <p>
-                        e are a leading company in the sports implements 
-                        and articles market that seeks to position itself 
-                        in the American Continent, providing high-quality 
-                        products for the practice of sports, both 
-                        professionally and recreationally, offering 
-                        solutions for different needs, using a technological 
-                        platform that simplifies and facilitate the processes 
-                        of the different areas, committed to supporting the 
-                        mental and physical health of our public.
-                    </p>
-                </article>
-                <article>
-                    <h6>W</h6> 
-                    <p>
-                        We provide solutions in the field of sports at a 
-                        national and international level through innovation,
-                        service and quality of the products we offer, our 
-                        resources are destined to contribute to the 
-                        development of physical and mental health, thus 
-                        achieving the commitment acquired with our target 
-                        audience.
-                    </p>
-                </article>
-                <button class="about_boton mt-5">
-                    Read  More
-                </button>
-            </div>
-        </div>
-        <div class="about_caracteristicas py-2 container my-5 d-flex flex-row  justify-content-center align-items-center">
-            <ul class="container d-flex flex-row flex-wrap justify-content-center align-items-center  mb-0">
-                <li class="d-flex flex-row justify-content-center align-items-center mx-2">
-                    <div class="d-flex flex-row justify-content-center align-items-center mx-2">
-                        <img src="PRUEBA/IMAGENES/icon--.png" alt="">
-                    </div>
-                    <p>Support</p>
-                </li>
-                <li class="d-flex flex-row  justify-content-center align-items-center mx-2">
-                    <div class="d-flex flex-row justify-content-center align-items-center mx-2">
-                        <img src="PRUEBA/IMAGENES/icon-2-2.png" alt="">
-                    </div>
-                    <p>Good Lead</p>
-                </li>
-                <li class="d-flex flex-row   justify-content-center align-items-center mx-2">
-                    <div class="d-flex flex-row justify-content-center align-items-center mx-2">
-                        <img src="PRUEBA/IMAGENES/icon-3-2.png" alt="">
-                    </div>
-                    <p>Quality</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section class="Subscribe_to_Newsletter Newsletter_about p-5 d-flex flex-column justify-content-center align-items-center my-5">
-        <div class="container">
-            <h2>Subscribe to Newsletter</h2>
-            <form class=" d-flex flex-row flex-wrap justify-content-center align-content-center ">
-                <input type="text" placeholder="" class="mx-1 my-4">
-                <div class="d-flex flex-row justify-content-center align-items-center">
-                    <button class="mx-2 text-center ">Subscribe</button>
+    <main class="main">
+        <section class="about d-flex flex-column w-100 ">
+            <div class="about_contenido_contenedor w-100">
+                <div class="about_informacion container">
+                    <article >
+                        <h6>W</h6> 
+                        <p>
+                            e are a leading company in the sports implements 
+                            and articles market that seeks to position itself 
+                            in the American Continent, providing high-quality 
+                            products for the practice of sports, both 
+                            professionally and recreationally, offering 
+                            solutions for different needs, using a technological 
+                            platform that simplifies and facilitate the processes 
+                            of the different areas, committed to supporting the 
+                            mental and physical health of our public.
+                        </p>
+                    </article>
+                    <article>
+                        <h6>W</h6> 
+                        <p>
+                            We provide solutions in the field of sports at a 
+                            national and international level through innovation,
+                            service and quality of the products we offer, our 
+                            resources are destined to contribute to the 
+                            development of physical and mental health, thus 
+                            achieving the commitment acquired with our target 
+                            audience.
+                        </p>
+                    </article>
+                    <button class="about_boton mt-4">
+                        Read  More
+                    </button>
                 </div>
-            </form>
-        </div>
-    </section>
-    <footer class="d-flex flex-column mt-5">
-        <div class="footer_info d-flex flex-row  mt-5 flex-wrap pt-4">
+            </div>
+            <div class="about_caracteristicas py-2 container my-4 d-flex flex-row  justify-content-center align-items-center">
+                <ul class="container d-flex flex-row flex-wrap justify-content-center align-items-center  mb-0">
+                    <li class="d-flex flex-row justify-content-center align-items-center mx-2">
+                        <div class="d-flex flex-row justify-content-center align-items-center mx-2">
+                            <img src="PRUEBA/IMAGENES/icon--.png" alt="">
+                        </div>
+                        <p>Support</p>
+                    </li>
+                    <li class="d-flex flex-row  justify-content-center align-items-center mx-2">
+                        <div class="d-flex flex-row justify-content-center align-items-center mx-2">
+                            <img src="PRUEBA/IMAGENES/icon-2-2.png" alt="">
+                        </div>
+                        <p>Good Lead</p>
+                    </li>
+                    <li class="d-flex flex-row   justify-content-center align-items-center mx-2">
+                        <div class="d-flex flex-row justify-content-center align-items-center mx-2">
+                            <img src="PRUEBA/IMAGENES/icon-3-2.png" alt="">
+                        </div>
+                        <p>Quality</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="Subscribe_to_Newsletter Newsletter_about p-5 d-flex flex-column justify-content-center align-items-center mt-4">
+            <div class="container">
+                <h2 class="text-center">Subscribe to Newsletter</h2>
+                <form class=" d-flex flex-row flex-wrap justify-content-center align-content-center ">
+                    <input type="text" placeholder="" class="">
+                    <div class="d-flex flex-row justify-content-center align-items-center">
+                        <button class="mx-2 text-center ">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+    </main>
+    <footer class="d-flex flex-column">
+        <div class="footer_info d-flex flex-row   flex-wrap pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center ">
                 <a href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
