--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         </div>
     </header>
     <section class=" d-flex flex-column align-items-end justify-content-center h-100 m-0 hero">
-        <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
+        <video autoplay loop muted pay class="w-100   position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
           </video>
         <div class="hero_panel_color_uno position-absolute h-100">
@@ -79,11 +79,8 @@
         <div class="hero_panel_color_dos position-absolute h-100"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Lead the pack! <br> Run Run!
+                Contact Us
             </h1>
-            <button class="hero_top_boton">
-                Get Started
-            </button>
         </div>
         <ul class="hero_redes_sociales d-flex flex-row ">
             <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
@@ -103,116 +100,114 @@
             </li>
         </ul>
     </section>
-<section class="contacto my-5">
-    <div class="d-flex flex-row">
-        <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="titulo_img">
-        <h2 class="contact_titulo">Contact</h2>
-    </div>
-    <div class="d-flex flex-row justify-content-center align-items-center ">
-        <form class="w-75 container">
-            <div class="form-group">
-              <input type="email" class="form-control border-0 w-100 shadow-sm p-3 rounded-lg my-4"  placeholder="Enter name">
+    <main>
+        <section class="contacto my-3">
+            <div class="d-flex flex-row justify-content-center align-items-center ">
+                <form class="w-75 container">
+                    <div class="form-group">
+                      <input type="email" class="form-control border-0 w-100 shadow-sm p-3 rounded-lg my-4"  placeholder="Enter name">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control border-0 w-100 shadow-sm p-3 my-4 rounded-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <input type="text" class="form-control  border-0 w-100 shadow-sm p-3 my-4 rounded-lg" placeholder="Enter phone">
+                    </div>
+                    <div class="form-group">
+                        <textarea class=" border-0 w-100 shadow-sm p-3 rounded-lg my-4" name=""  placeholder="Message" wid></textarea>
+                    </div>
+                    <button type="submit " class="btn ">Submit</button>
+                </form>
             </div>
-            <div class="form-group">
-                <input type="email" class="form-control border-0 w-100 shadow-sm p-3 my-4 rounded-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <input type="text" class="form-control  border-0 w-100 shadow-sm p-3 my-4 rounded-lg" placeholder="Enter phone">
+        </section>
+        <section class="Subscribe_to_Newsletter Newsletter_conctact d-flex flex-column justify-content-center align-items-center  py-5">
+            <h2>Subscribe to Newsletter</h2>
+            <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
+                <input type="text" placeholder="" class="mx-1">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <button class="mx-2 text-center ">Subscribe</button>
+                </div>
+            </form>
+        </section>
+    </main>
+    <footer class="d-flex flex-column ">
+        <div class="footer_info d-flex flex-row   flex-wrap pt-4">
+            <div class="d-flex flex-column justify-content-center align-items-center ">
+                <a href="index.html" target="_blank" rel="noopener noreferrer">
+                    <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+                </a>
+                <ul class="d-flex flex-row list-unstyled">
+                    <li class="mx-2">
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                    </li>
+                    <li class="mx-2">
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="mx-2">
+                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <div class="form-group">
-                <textarea class="border-0 w-100 shadow-sm p-3 rounded-lg my-4" name=""  placeholder="Message" wid></textarea>
+            <div>
+                <h6>Quick Links</h6>
+                <ul>
+                    <li >
+                        <span class="punto"></span>
+                        <a aria-current="page" href="about.html">About us</a>
+                    </li>
+                    <li >
+                        <span class="punto "></span>
+                        <a  href="shop.html">Shop By</a>
+                    </li>
+                    <li class=>
+                        <span class="punto"></span>
+                        <a  href="preguntasF.html">Faq’s </a>
+                    </li>
+                    <li >
+                        <span class="punto"></span>
+                        <a  href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
             </div>
-            <button type="submit " class="btn ">Submit</button>
-        </form>
-    </div>
-</section>
-<section class="Subscribe_to_Newsletter Newsletter_conctact d-flex flex-column justify-content-center align-items-center my-5 py-5">
-    <h2>Subscribe to Newsletter</h2>
-    <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
-        <input type="text" placeholder="" class="mx-1">
-        <div class="d-flex flex-row justify-content-center align-items-center">
-            <button class="mx-2 text-center ">Subscribe</button>
+            <div>
+                <h6>More Information</h6>
+                <ul>
+                    <li class="list-unstyled d-flex flex-row">
+                        <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-geo-alt-fill mx-2"></i>
+                            <p>
+                                5191 Eastside Hwy
+                                Stevensville, MT 59870
+                            </p>
+                        </a>
+                    </li>
+                    <li class="list-unstyled d-flex flex-row">
+                        <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-envelope-fill mx-2"></i>
+                            <p>info@glamping.global</p>
+                        </a>
+                    </li>
+                    <li class="list-unstyled d-flex flex-row2">
+                        <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
+                            <i class="bi bi-telephone-fill mx-2"></i>
+                            <p>Tel: 1-844-WEGLAMP</p>
+                        </a> 
+                    </li>
+                </ul>
+            </div>
         </div>
-    </form>
-</section>
-<footer class="d-flex flex-column mt-5">
-    <div class="footer_info d-flex flex-row  mt-5 flex-wrap pt-4">
-        <div class="d-flex flex-column justify-content-center align-items-center ">
-            <a href="index.html" target="_blank" rel="noopener noreferrer">
-                <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
+        <div class="d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
+            <p>Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+            <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
             </a>
-            <ul class="d-flex flex-row list-unstyled">
-                <li class="mx-2">
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-facebook"></i>
-                    </a>
-                </li>
-                <li class="mx-2">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                </li>
-                <li class="mx-2">
-                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-linkedin"></i>
-                    </a>
-                </li>
-            </ul>
         </div>
-        <div>
-            <h6>Quick Links</h6>
-            <ul>
-                <li >
-                    <span class="punto"></span>
-                    <a aria-current="page" href="about.html">About us</a>
-                </li>
-                <li >
-                    <span class="punto "></span>
-                    <a  href="shop.html">Shop By</a>
-                </li>
-                <li class=>
-                    <span class="punto"></span>
-                    <a  href="preguntasF.html">Faq’s </a>
-                </li>
-                <li >
-                    <span class="punto"></span>
-                    <a  href="contact.html">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <h6>More Information</h6>
-            <ul>
-                <li class="list-unstyled d-flex flex-row">
-                    <a href="https://www.google.com/maps/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-geo-alt-fill mx-2"></i>
-                        <p>
-                            5191 Eastside Hwy
-                            Stevensville, MT 59870
-                        </p>
-                    </a>
-                </li>
-                <li class="list-unstyled d-flex flex-row">
-                    <a href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-envelope-fill mx-2"></i>
-                        <p>info@glamping.global</p>
-                    </a>
-                </li>
-                <li class="list-unstyled d-flex flex-row2">
-                    <a href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer">
-                        <i class="bi bi-telephone-fill mx-2"></i>
-                        <p>Tel: 1-844-WEGLAMP</p>
-                    </a> 
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-        <p>Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-        <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
-            <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
-        </a>
-    </div>
-</footer>
-<script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
-<script src="js/nav.js"></script>
+    </footer>
+    <script src="bootstrap-4.6.1/dist/js/bootstrap.min.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 </html>
