--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="seccion_titulo_img">
             <h2 class="seccion_titulo">BEST SELLERS</h2>
         </div>
-        <div class="container d-flex flex-column justify-content-center align-items-center my-5">
+        <div class="container d-flex flex-column justify-content-center align-items-center ">
             <div class=" owl-1 owl-carousel owl-theme  ">
                 <div class="item ">
                     <div class="container d-flex justify-content-center p-3 ">
@@ -262,7 +262,7 @@
                 </div>
             </div>
         </div>
-        <div class="shop_by_category_boton_contenedor d-flex flex-row justify-content-end  mx-5">
+        <div class="shop_by_category_boton_contenedor d-flex flex-row justify-content-end ">
             <button class="shop_by_category_boton border-0  ">
                 View More
             </button>
@@ -323,7 +323,7 @@
             </div>
         </div>
     </section>
-    <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-5 py-5">
+    <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-5  ">
         <h2>Subscribe to Newsletter</h2>
         <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
             <input type="text" placeholder="" class="mx-1">
@@ -332,8 +332,8 @@
             </div>
         </form>
     </section>
-    <footer class="d-flex flex-column mt-5">
-        <div class="footer_info d-flex flex-row  mt-5 flex-wrap pt-4">
+    <footer class="d-flex flex-column ">
+        <div class="footer_info d-flex flex-row   flex-wrap pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center ">
                 <a href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
