--- a/preguntasF.html
+++ b/preguntasF.html
@@ -71,7 +71,7 @@
         </div>
     </header>
     <section class=" d-flex flex-column align-items-end justify-content-center h-100 m-0 hero">
-        <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
+        <video autoplay loop muted pay class="w-100   position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
           </video>
         <div class="hero_panel_color_uno position-absolute h-100">
@@ -79,11 +79,8 @@
         <div class="hero_panel_color_dos position-absolute h-100"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Lead the pack! <br> Run Run!
+                Shop By
             </h1>
-            <button class="hero_top_boton">
-                Get Started
-            </button>
         </div>
         <ul class="hero_redes_sociales d-flex flex-row ">
             <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
@@ -103,61 +100,62 @@
             </li>
         </ul>
     </section>
-
-    <section class="preguntas_frecuentes">
-        <div class="accordion m-5 " id="accordionExample">
-            <div class="card">
-              <div class="card-header" id="headingOne">
-                <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Is it safe to use my credit card on the website? #1              </button>
-                </h2>
-              </div>
-          
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body">
-                    Yes, all your data is sent fully encrypted. And the entire system is automated and secure.          </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingTwo">
-                <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Can I exchange my items? #2
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                    Yes, as long as the clothing is in perfect condition and no more than 5 days have elapsed since the purchase, the condition of the clothing will be evaluated and you will be allowed to exchange it for something of the same or greater value (you will have to pay the difference) .            </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingThree">
-                <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Home deliveries are made? #3
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body">
-                    Yes, if in a nearby place our shipping team will take care of it, if the place is very far away it is sent through an agency with which we are associated
+    <main>
+        <section class="preguntas_frecuentes">
+            <div class="accordion m-5 " id="accordionExample">
+                <div class="card">
+                  <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                      <button class="btn  btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Is it safe to use my credit card on the website? #1              </button>
+                    </h2>
+                  </div>
+              
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        Yes, all your data is sent fully encrypted. And the entire system is automated and secure.          </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingTwo">
+                    <h2 class="mb-0">
+                      <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Can I exchange my items? #2
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
+                        Yes, as long as the clothing is in perfect condition and no more than 5 days have elapsed since the purchase, the condition of the clothing will be evaluated and you will be allowed to exchange it for something of the same or greater value (you will have to pay the difference) .            </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingThree">
+                    <h2 class="mb-0">
+                      <button class="btn  btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Home deliveries are made? #3
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                    <div class="card-body">
+                        Yes, if in a nearby place our shipping team will take care of it, if the place is very far away it is sent through an agency with which we are associated
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-    </section>
-    <section class="Subscribe_to_Newsletter Newsletter_preguntas_frecuentes  py-5 d-flex flex-column justify-content-center align-items-center my-5">
-        <h2>Subscribe to Newsletter</h2>
-        <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
-            <input type="text" placeholder="" class="mx-1">
-            <div class="d-flex flex-row justify-content-center align-items-center">
-                <button class="mx-2 text-center ">Subscribe</button>
-            </div>
-        </form>
-    </section>
-    <footer class="d-flex flex-column mt-5">
-        <div class="footer_info d-flex flex-row  mt-5 flex-wrap pt-4">
+        </section>
+        <section class="Subscribe_to_Newsletter Newsletter_preguntas_frecuentes  py-5 d-flex flex-column justify-content-center align-items-center ">
+            <h2>Subscribe to Newsletter</h2>
+            <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
+                <input type="text" placeholder="" class="mx-1">
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <button class="mx-2 text-center ">Subscribe</button>
+                </div>
+            </form>
+        </section>
+    </main>
+    <footer class="d-flex flex-column ">
+        <div class="footer_info d-flex flex-row   flex-wrap pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center ">
                 <a href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
